     too easy to win
 * language and i18n:
   * updated translations: Dutch, Filipino, German, Greek, Hungarian, Italian,
     Lithuanian, Slovak, Spanish, Turkish
   * replaced the font used for the chiense translation (gkai00mp.ttf) with a
     subset of WQY (just the gb2312 part is included) as requested by the
     chinese maintainer
 * multiplayer:
   * revised maps: The Freelands
   * don't display 'Remote scenario' for reloaded games in the multiplayer
     lobby which is wrong in most cases (fixes bug #10882), the display
     of 'Reloaded game' is disabled for now because of the string freeze
   * Fixed MP saves loadind to choose correct human side (bug #10894)
   * display reloaded games in yellow instead of green in the game list
     as they are also a kind of already running games
   * Made era not required while loading save game
   * Removed bogus client commands about takeing side
   * Fixed control change when giving own team (bug #6639)
   * when loading a savegame don't offer to take the non-player sides (bug
     #10746)
 * units:
   * balancing changes:
     * decreased the village defense of Bats from 60% to 40%
     * decreased the forest defense of the Ranger from 70% to 60%
     * decreased the forest movement cost of the Ranger from 2 to 1
     * decreased the shallow water, mountain, swamp and snow movement cost of
       the Ranger from 3 to 2
 * user interface:
   * During dialogs the speaker is shown in the sidebar and highlighted.
   * During ai moves the source hex is no longer highlighted.
   * show unit standing animations and idle animations are now separate options
   * Removed broken "Host network game" option from multiplayer menu (bug #10800)
   * Fixed network game creation return back to create dialog after failed
     savegame loading
   * Fixed a small glitch with fog and shroud in the corners (bug #10831)
   * share_view now looks at whether your allies have shared their view,